# developer-intelligence-platform

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.ai/: README.md
.ai/architecture/: agent-flow.md  api-design.md  context-engine.md  database-design.md  event-flow.md  folder-structure.md  knowledge-lifecycle.md  system-overview.md
.ai/context/: current-task.md  environments.md  project-overview.md  roadmap.md  tech-stack.md
.ai/contracts/: agent-contract.md  api-contract.md  event-contract.md  knowledge-contract.md  module-contract.md
.ai/core/: architecture-principles.md  coding-guidelines.md  naming-conventions.md  system.md
.ai/decisions/: ADR-001-python.md  ADR-002-fastapi.md  ADR-003-eventbus.md  ADR-005-platform-package-rename.md  ADR-006-anthropic-adapter.md  ADR-006-knowledge-retrieval-architecture.md  ADR-007-jira-http-adapter.md  ADR-008-git-local-adapter.md  ADR-009-local-embedding-pgvector.md  ADR-010-team-shelf-access-control.md  ADR-011-redis-event-bus.md  ADR-012-llm-gateway-governance.md  ADR-013-cross-encoder-reranker.md  ADR-014-mmr-search-diversification.md  ADR-015-issue-faceted-taxonomy.md  ADR-016-neo4j-graphify.md
.ai/glossary/: terms.md
.ai/knowledge/: taxonomy.md
.ai/onboarding/: getting-started.md  repository-tour.md  run-24h-service.md
.ai/philosophy/: context-over-prompt.md  event-driven.md  knowledge-first.md
.ai/planning/: backlog.md  knowledge-library.md  milestones.md  roadmap.md  sprint-plan.md  target-service.md
.ai/playbooks/: impact-analysis.md  incident-analysis.md  jira-analysis.md  release.md  review.md
.ai/references/: fastapi.md  jira-api.md  postgres.md
.ai/reviews/: review-001.md  review-002.md
.ai/standards/: branch.md  commit.md  pull-request.md  review.md  testing.md
.ai/state/: current-architecture.md  known-limitations.md  technical-debt.md
.ai/tasks/: Sprint-01.md  Sprint-02.md  Sprint-03.md  Sprint-04.md  Sprint-05.md  Sprint-06.md  Sprint-07.md  Sprint-08.md  Sprint-09.md  Sprint-10.md  Sprint-11.md  Sprint-12.md  Sprint-13.md  Sprint-14.md  Sprint-15.md
.ai/templates/: adr.md  incident.md  review.md  task.md
.ai/workflow/: 01-discovery.md  02-design.md  03-implementation.md  04-review.md  05-release.md
apps/: classify_bootstrap.py  classify_enrich.py  composition.py  composition_pg.py  eval_rag.py  graph_backfill.py  obsidian_export.py  wiki_pipeline.py
apps/api/: main.py
apps/cli/: classify.py  collect.py  collect_jira.py  demo.py  demo_pg.py  graph.py  migrate.py  obsidian.py  triage_real.py  wiki.py
apps/mcp/: queries.py  server.py
apps/scheduler/: git_sync.py  jira_sync.py  run.py
apps/worker/: run.py
config/access/: team_shelves.txt
config/refinement/: noise_phrases.txt
database/migrations/: 001_init.sql  002_commits.sql  003_knowledge.sql  006_issue_assignee.sql  007_issue_fields.sql  008_knowledge_source.sql  009_embeddings.sql  010_query_gaps.sql  011_issue_related_wiki.sql  012_knowledge_fts.sql  013_issue_facets.sql  014_readonly_role.sql
dip_platform/access/: __init__.py  policy.py
dip_platform/audit/: __init__.py  audit_log.py
dip_platform/auth/: __init__.py  authenticator.py
dip_platform/context/: __init__.py  builder.py  model.py
dip_platform/event/: __init__.py  bus.py  event.py  store.py
dip_platform/registry/: __init__.py  prompt_registry.py
dip_platform/workflow/: __init__.py  agent.py  events.py  ports.py  runner.py  validation.py
infrastructure/anthropic/: client.py
infrastructure/embedding/: __init__.py  client.py  reranker.py
infrastructure/git/: client.py
infrastructure/jira/: client.py
infrastructure/knowledgedocs/: reader.py
infrastructure/llm/: client.py
infrastructure/neo4j/: __init__.py  graph_repository.py
infrastructure/postgres/: connection.py  event_store.py
infrastructure/redis/: __init__.py  event_bus.py
knowledge/: order-collection-overcharge.md  order-exchange-flag.md
prompts/eval/: question_gen.md
prompts/impact/: analyze.md
prompts/knowledge/: ask.md  classify.md  wiki.md
prompts/triage/: classify.md
scripts/: pg_smoke.py
shared/config/: settings.py
shared/constants/: __init__.py
shared/exceptions/: __init__.py
tests/: conftest.py
(+98 files in other folders)
